<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/search_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/search_view_height"
                    android:layout_marginBottom="@dimen/margin_medium_large"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:background="@drawable/search_view_background"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    app:defaultQueryHint="@string/search_hint"
                    app:iconifiedByDefault="false" />
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/recent_search_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/app_bar_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recent_search"
                android:textAppearance="@style/TextAppearance.AppTheme.Headline2.NonCaps" />

            <TextView
                android:id="@+id/recent_search_empty_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_small_s"
                android:text="@string/recent_search_empty"
                android:textAppearance="@style/TextAppearance.AppTheme.Headline2.NonCaps.Grey" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/recent_search_chips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small_s" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_result_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/app_bar_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stocks_page_title"
                android:textAppearance="@style/TextAppearance.AppTheme.Headline2.NonCaps" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_result_stocks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingTop="@dimen/padding_small_s"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:id="@+id/search_result_empty_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_small_s"
                android:text="@string/search_result_empty"
                android:textAppearance="@style/TextAppearance.AppTheme.Headline2.NonCaps.Grey"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/shimmer_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small_s"
                android:orientation="vertical"
                android:visibility="gone">

                <include
                    layout="@layout/stock_item_shimmer_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small_s" />

                <include
                    layout="@layout/stock_item_shimmer_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small_s" />

                <include
                    layout="@layout/stock_item_shimmer_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small_s" />

                <include
                    layout="@layout/stock_item_shimmer_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small_s" />

                <include
                    layout="@layout/stock_item_shimmer_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small_s" />

                <include
                    layout="@layout/stock_item_shimmer_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small_s" />

                <include
                    layout="@layout/stock_item_shimmer_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small_s" />

                <include
                    layout="@layout/stock_item_shimmer_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small_s" />

                <include
                    layout="@layout/stock_item_shimmer_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small_s" />

                <include
                    layout="@layout/stock_item_shimmer_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small_s" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>